--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>You!Paint</title>
+    <title>Paint</title>
     <link rel="shortcut icon" type="image/png" href=”Pics/Favicon.png”/>
     <link rel="stylesheet" href="style.css">
 </head>
